k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: domibus
    app.kubernetes.io/component: domibus
    app.kubernetes.io/instance: domibus
    app.kubernetes.io/name: domibus
    app.kubernetes.io/part-of: domibus-app
  name: domibus
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: domibus
    deploymentconfig: domibus
  sessionAffinity: None
  type: ClusterIP
