k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: domibus
    app.kubernetes.io/component: domibus
    app.kubernetes.io/instance: domibus
    app.kubernetes.io/name: domibus
    app.kubernetes.io/part-of: domibus-app
  name: domibus
spec:
  path: /domibus
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: domibus
    weight: 100
  wildcardPolicy: None
